Closed Bug 333538 Opened 20 years ago Closed 20 years ago

nsSigHandlers should trap SIGFPE

Categories

(Core :: XUL, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: dbaron, Assigned: dbaron)

Details

(Whiteboard: [patch])

Attachments

(1 file)

nsSigHanglers should trap SIGFPE for dropping into the debugger. (I work on layout code. I sometimes divide by zero.)
Attached patch patchSplinter Review
Attachment #217985 - Flags: superreview?(bryner)
Attachment #217985 - Flags: review?(bryner)
Status: NEW → ASSIGNED
Whiteboard: [patch]
Target Milestone: --- → mozilla1.9alpha
I should add the abnormal_exit_handler line as well...
Attachment #217985 - Flags: superreview?(bryner)
Attachment #217985 - Flags: superreview+
Attachment #217985 - Flags: review?(bryner)
Attachment #217985 - Flags: review+
Checked in to trunk.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: