Do the crash-information dance for SIGFPE as well.  b=333538  r+sr=bryner